sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: not found: value j
			if (plusPetit(j+1,j)) {
                                      ^