sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2()  {
	for (i <- getNombreValeurs()-2 to 0 by -1) {
		for (i <- 0 to i) {
			if (plusPetit(j+1,j)) {
				echange(i,i+1)
			}	
		}
	}	
}
